Fix size of text-area in tweet form so multi-line tweet does not overlap

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -12,8 +12,7 @@
   border-color: #545149;
   border-width: 0 0 5px 0;
   resize: none;
-  line-height: 15px;
-  padding-top: 20px;
+  line-height: 30px;
   font-weight: bold;
 }
 
